--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,86 @@
     transform: rotate(360deg);
   }
 }
+
+header { /* Header*/
+  top: 0;
+  left:0;
+  margin: 0;
+  padding: 0;
+  z-index: 99;
+  background: linear-gradient(to right, #0f8a5f, #66b2ff);
+  padding-top: 30px;
+  padding-bottom: 30px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  width: 100%;
+  height: auto;
+  position:fixed;
+  color: white;
+}
+
+a{
+  text-decoration:none;
+  font-weight: normal;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  color: white;
+}
+
+div.developer-cards {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: lightblue;
+  border-radius: 5px;
+  transition: 0.3s;
+  max-width: 300px;
+  margin: 20px;
+  margin-top: 100px;
+  text-align: center;
+  font-family: arial;
+  padding: 15px 15px 15px 15px;
+  flex-shrink: 0;
+  flex-grow: 0;
+}
+
+p.title {
+  color: grey;
+  font-size: 18px;
+}
+
+
+div.developer-cards a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+div.social-links {
+  margin: 15px 0;
+  font-size: 22px;
+  background: none;
+}
+
+div.card-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+div.developer-cards:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+}
+
+div.developer-cards img {
+  border-radius: 5px;
+  width: 100%;
+  height: auto;
+  max-width: 300px;
+  max-height: 300px;
+  margin-top: 15px;
+}
